[package]
name = "arceos_posix_api"
version = "0.1.0"
edition = "2021"
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "yanjuguang <coolyanjg@163.com>",
    "wudashuai <wu-ds20@mails.tsinghua.edu.cn>",
    "yfblock <321353225@qq.com>",
    "scPointer <bhy18@mails.tsinghua.edu.cn>",
    "Shiping Yuan <robert_yuan@pku.edu.com>",
]
description = "ArceOS system call layer"
license = "GPL-3.0-or-later OR Apache-2.0"
repository = "https://github.com/rcore-os/arceos/tree/main/api/arceos_posix_api"

# [lib]
# crate-type = ["staticlib"]

[features]
default = []

alloc = ["axalloc", "axfeat/alloc", "axio/alloc"]

fp_simd = ["axfeat/fp_simd"]

multitask = ["axtask/multitask", "axfeat/multitask", "axsync/multitask"]

fs =["fd", "axfeat/fs", "axfs"]

net = ["axfeat/net", "axnet", "fd"]

# Libc features
fd = ["alloc"]
pipe = ["fd"]
select = ["fd"]
epoll = ["fd"]

[dependencies]
axfeat = { path = "../axfeat" }
axerrno = { path = "../../crates/axerrno" }
axio = { path = "../../crates/axio" }
axhal = { path = "../../modules/axhal" }
axlog = { path = "../../modules/axlog" }
axruntime = { path = "../../modules/axruntime" }
axalloc = { path = "../../modules/axalloc", optional = true }
axfs = { path = "../../modules/axfs", optional = true }
axnet = { path = "../../modules/axnet", optional = true }
axsync = { path = "../../modules/axsync", default-features = false, optional = true }
axtask = { path = "../../modules/axtask", optional = true }
flatten_objects = { path = "../../crates/flatten_objects" }
spinlock = { path = "../../crates/spinlock" }

lazy_static = { version = "1.4", features = ["spin_no_std"] }
num_enum = { version = "0.5.11", default-features = false }
spin = { version = "0.9" }

[build-dependencies]
cbindgen = { version = "0.24" }
bindgen ={ version = "0.66" }
axconfig = { path = "../../modules/axconfig" }
