[package]
name = "axlibc"
version = "0.1.0"
edition = "2021"
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "yanjuguang <coolyanjg@163.com>",
    "wudashuai <wu-ds20@mails.tsinghua.edu.cn>",
    "yfblock <321353225@qq.com>",
    "scPointer <bhy18@mails.tsinghua.edu.cn>",
    "Shiping Yuan <robert_yuan@pku.edu.com>",
]
description = "ArceOS user program library for C apps"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/ulib/axlibc"
documentation = "https://rcore-os.github.io/arceos/axlibc/index.html"

[lib]
crate-type = ["staticlib"]

[features]
default = []

# Multicore
smp = ["axfeat/smp", "arceos_posix_api/smp"]

# Floating point/SIMD
fp_simd = ["axfeat/fp_simd", "arceos_posix_api/fp_simd"]

# Memory
alloc = ["axfeat/alloc", "dep:axalloc", "arceos_posix_api/alloc", "axio/alloc"]
alloc-tlsf = ["axfeat/alloc-tlsf"]
alloc-slab = ["axfeat/alloc-slab"]
alloc-buddy = ["axfeat/alloc-buddy"]
paging = ["axfeat/paging"]
tls = ["axfeat/tls"]

# Multi-task
multitask = ["axfeat/multitask", "axtask/multitask", "arceos_posix_api/multitask"]
sched_fifo = ["axfeat/sched_fifo"]
sched_rr = ["axfeat/sched_rr"]
sched_cfs = ["axfeat/sched_cfs"]

# File system
fs = ["axfeat/fs", "fd", "arceos_posix_api/fs"]
myfs = ["axfeat/myfs"]

# Networking
net = ["axfeat/net", "dep:axnet", "fd", "arceos_posix_api/net"]
dns = []

# Display
display = ["axfeat/display"]

# Device drivers
bus-mmio = ["axfeat/bus-mmio"]
bus-pci = ["axfeat/bus-pci"]
driver-ramdisk = ["axfeat/driver-ramdisk"]
driver-ixgbe = ["axfeat/driver-ixgbe"]
driver-bcm2835-sdhci = ["axfeat/driver-bcm2835-sdhci"]

# Logging
log-level-off = ["axfeat/log-level-off"]
log-level-error = ["axfeat/log-level-error"]
log-level-warn = ["axfeat/log-level-warn"]
log-level-info = ["axfeat/log-level-info"]
log-level-debug = ["axfeat/log-level-debug"]
log-level-trace = ["axfeat/log-level-trace"]

# Libc features
fd = ["alloc"]
pipe = ["fd", "arceos_posix_api/pipe"]
select = ["fd", "arceos_posix_api/select"]
epoll = ["fd", "arceos_posix_api/epoll"]

[dependencies]
# ArceOS modules
axfeat = { path = "../../api/axfeat" }
arceos_posix_api = { path = "../../api/arceos_posix_api" }
axerrno = { path = "../../crates/axerrno" }
axio = { path = "../../crates/axio" }
flatten_objects = { path = "../../crates/flatten_objects" }
axconfig = { path = "../../modules/axconfig" }
axhal = { path = "../../modules/axhal" }
axlog = { path = "../../modules/axlog" }
axalloc = { path = "../../modules/axalloc", optional = true }
axnet = { path = "../../modules/axnet", optional = true }
axtask = { path = "../../modules/axtask", optional = true }

# Other crates
lazy_static = { version = "1.4", features = ["spin_no_std"] }

[build-dependencies]
cbindgen = { version = "0.24" }
bindgen ={ version = "0.66" }
axconfig = { path = "../../modules/axconfig" }
